# JobAggregator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  TROUBLESHOOTING.md  blood_orange_theme_detail.html  docker-compose.yml  pyproject.toml  research.md  start.sh
config/: default_config.yaml  profile.example.yaml
deploy/: job-aggregator-serve.service  job-aggregator.service  job-aggregator.timer
docs/: ats_token_lists.md  auto_apply_design.md  testing.md
src/job_aggregator/: __init__.py  __main__.py  cli.py  clock.py  errors.py  logging_setup.py  paths.py
src/job_aggregator/apply/: agent.py  agentic.py  backends.py  cookies.py  detector.py  driver.py  grounding.py  procs.py  session.py
src/job_aggregator/apply/ats/: __init__.py  ashby.py  base.py  greenhouse.py  lever.py  smartrecruiters.py
src/job_aggregator/config/: schema.py  store.py
src/job_aggregator/dashboard/: app.py  deps.py  routes_config.py  routes_jobs.py  routes_runs.py
src/job_aggregator/dashboard/static/css/: app.css  theme.css
src/job_aggregator/dashboard/static/js/: app.js
src/job_aggregator/dashboard/templates/: base.html  config.html  jobs.html  profile.html  runs.html
src/job_aggregator/dashboard/templates/partials/: _macros.html  job_card.html  job_detail.html  job_row.html  resume_preview.html  run_status.html
src/job_aggregator/models/: job.py
src/job_aggregator/notify/: base.py  email.py  rss.py  telegram.py
src/job_aggregator/pipeline/: dedup.py  filters.py  normalize.py  runner.py  salary.py  stale.py
src/job_aggregator/profile/: schema.py  store.py
src/job_aggregator/resume/: render.py  tailor.py
src/job_aggregator/resume/templates/: base_resume.tex
src/job_aggregator/scheduler/: scheduler.py
src/job_aggregator/sources/: _http.py  adzuna.py  ats_ashby.py  ats_greenhouse.py  ats_lever.py  ats_smartrecruiters.py  base.py  himalayas.py  internshala.py  jobicy.py  jobspy_source.py  jooble.py  registry.py  remoteok.py  unstop.py
src/job_aggregator/storage/: db.py  jobs_repo.py  runs_repo.py  schema.sql
tests/: _fakes.py  conftest.py  test_apply_agent.py  test_apply_agentic.py  test_apply_ats.py  test_apply_driver.py  test_apply_grounding.py  test_apply_procs.py  test_apply_session.py  test_backends.py  test_cli.py  test_config_store.py  test_dashboard.py  test_dedup.py  test_docs.py  test_e2e_offline.py  test_filters.py  test_internshala.py  test_internship_targeting.py  test_jobs_repo.py  test_jobspy_source.py  test_normalize.py  test_notify.py  test_profile.py  test_resume.py  test_runner.py  test_salary.py  test_scheduler.py  test_sources_apis.py  test_sources_ats.py  test_stale.py
tests/fixtures/: adzuna.json  ashby.json  greenhouse.json  himalayas.json  jobicy.json  jooble.json  lever.json  lever_notfound.json  remoteok.json  smartrecruiters.json  unstop.json
