[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-aggregator"
version = "0.1.0"
description = "Self-hosted job/internship aggregator: multi-source fetch, dedup, stale-deletion, and a FastAPI dashboard. Tuned for remote/India systems + AI roles."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Bibek Jyoti Charah", email = "bibekcharah@gmail.com" }]

# Runtime dependencies. Pinned loosely; the correctness core (storage/pipeline) leans on
# stdlib, so most of these are for sources (jobspy/httpx), the dashboard (fastapi), and
# the scheduler (apscheduler). See PLAN.md §0 for the rationale behind each choice.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",   # FastAPI form posts (config editor)
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "httpx>=0.27",               # Tier B/C API + ATS fetches
    "beautifulsoup4>=4.12",      # Internshala listing-page parsing (HTML source, no API)
    "python-jobspy>=1.1.79",     # Tier A: Naukri/LinkedIn-guest/Indeed/Google
    "rapidfuzz>=3.9",            # fuzzy near-duplicate title matching
    "apscheduler>=3.10,<4",      # daily in-process scheduler (3.x API; see PLAN Phase 6)
    "python-dotenv>=1.0",        # load .env for secrets
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "respx>=0.21",               # httpx mocking in tests
    "freezegun>=1.5",            # only where injected FixedClock is awkward
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]
# Track D (browser apply agent) — opt-in; the core tool never needs these. Install with
# `pip install -e '.[apply]' && playwright install chromium`. Lazy-imported behind seams so
# pytest/mypy never require them (mirrors the jobspy `_scrape_jobs` seam).
apply = [
    "browser-use>=0.1",         # MIT, Playwright-based DOM-first browser agent (headful)
    "playwright>=1.45",          # storageState session persistence + deterministic ATS fills
    "cryptography>=42",          # Fernet encryption for the persisted session blobs at rest
]

[project.scripts]
job-aggregator = "job_aggregator.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# Ship non-Python package resources in wheels too (editable installs read them from src anyway).
[tool.setuptools.package-data]
job_aggregator = [
  "storage/*.sql",
  "dashboard/templates/*.html",
  "dashboard/templates/partials/*.html",
  "dashboard/static/*.svg",
  "dashboard/static/css/*.css",
  "dashboard/static/js/*.js",
  "resume/templates/*.tex",
]

# ── Ruff: lint + format. Mirrors his C++ -Wall -Wextra -Wpedantic discipline. ──
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF", "PL"]
ignore = [
    "PLR0913",  # many-args functions are fine for source adapters
    "PLR2004",  # magic-value in tests is fine
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers are called in argument defaults by design.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Form", "fastapi.Body"]

[tool.ruff.lint.per-file-ignores]
# Deferred imports are deliberate here: cli.py keeps heavy deps lazy so `--help` runs on the
# stdlib alone (see cli.py docstring), and test fixtures import Phase-scoped modules inside the
# fixture body so collection never depends on unbuilt phases.
"tests/*" = ["PLR2004", "S101", "PLC0415"]
"src/job_aggregator/cli.py" = ["PLC0415"]
# jobspy/pandas are imported lazily inside _scrape_jobs so the CLI stays importable without them.
"src/job_aggregator/sources/jobspy_source.py" = ["PLC0415"]
# runner defers source-registry + notifier imports (break import weight / Phase-7 coupling).
"src/job_aggregator/pipeline/runner.py" = ["PLC0415"]
# scheduler defers apscheduler + config/runner/repo imports into method bodies (see module docs).
"src/job_aggregator/scheduler/scheduler.py" = ["PLC0415"]
# notify.build_notifiers imports channel modules lazily to avoid a base<->channel import cycle.
"src/job_aggregator/notify/base.py" = ["PLC0415"]
# dashboard create_app defers scheduler/clock/connect imports (keeps build light, no cycle).
"src/job_aggregator/dashboard/app.py" = ["PLC0415"]
# apply/ (Track D) lazy-imports the [apply] extra (cryptography/playwright) behind seams so the
# core tool never requires them (mirrors the jobspy _scrape_jobs seam).
"src/job_aggregator/apply/session.py" = ["PLC0415"]
"src/job_aggregator/apply/driver.py" = ["PLC0415"]
"src/job_aggregator/apply/agentic.py" = ["PLC0415"]
# the v2 migration borrows pipeline.filters.detect_internship for its backfill; importing it
# lazily keeps the storage layer free of a module-load-time dependency on the pipeline layer.
"src/job_aggregator/storage/db.py" = ["PLC0415"]

[tool.ruff.format]
quote-style = "double"

# ── Mypy: strict. ──
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
namespace_packages = true
mypy_path = "src"
# jobspy / apscheduler ship without full type stubs; allow untyped imports for those only.
[[tool.mypy.overrides]]
module = ["jobspy.*", "apscheduler.*", "pandas", "pandas.*", "browser_use.*", "playwright.*", "cryptography.*"]
ignore_missing_imports = true

# ── Pytest ──
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --cov=job_aggregator --cov-report=term-missing --cov-fail-under=85"
pythonpath = ["src"]
markers = [
    "network: real network I/O; deselected by default. Run with `-m network`.",
    "slow: slower integration test (e2e, full run_cycle).",
]

[tool.coverage.run]
branch = true
source = ["job_aggregator"]
# Network-bound adapters + the thin CLI/dashboard shells are exercised by respx-mocked and
# TestClient tests, but their line coverage is noisy and would mask the correctness core; the
# hard gate is on storage/pipeline/config/models/sources/scheduler/notify.
omit = ["*/__main__.py", "*/cli.py", "*/dashboard/*", "*/logging_setup.py", "*/apply/session.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError", "\\.\\.\\."]
